--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
       "@graphql-mesh/merger-*": ["packages/mergers/*/src/index.ts"],
       "@graphql-mesh/*": ["packages/handlers/*/src/index.ts"],
       "json-machete": ["packages/json-machete/src/index.ts"],
-      "@omnigraphql/*": ["packages/loaders/*/src/index.ts"]
+      "@omnigraph/*": ["packages/loaders/*/src/index.ts"]
     }
   },
   "include": ["./declarations.d.ts", "packages"],
