--- a/packages/loaders/json-schema/package.json
+++ b/packages/loaders/json-schema/package.json
@@ -35,6 +35,7 @@
     "graphql-compose": "9.0.3",
     "graphql-scalars": "1.10.1",
     "@graphql-mesh/utils": "0.16.2",
+    "cross-fetch": "3.1.4",
     "ajv": "8.6.3",
     "ajv-formats": "2.1.1",
     "url-join": "4.0.1",
